# code-brain

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NEXT.md  OPERATIONS.md  PRODUCTION_HARDENING_BACKLOG.md  README.md  RELEASE.md  SECURITY.md  bootstrap-code-brain.sh  bootstrap.ps1  bootstrap.sh
.ai/runtime/: pyproject.toml
.ai/runtime/src/ai_core/: acceptance.py  agent_recommend.py  agent_runtime.py  agents_md.py  ast_chunker.py  ast_verify.py  astgrep_integration.py  audit_fold.py  audit_repair.py  autonomous_harness.py  cast_eval.py  chunk_filter.py  cli.py  code_navigation_eval.py  code_retrieval_eval.py  codebase_map.py  codegraph.py  commit_guard.py  config.py  context_budget.py  dense_retrieval.py  dir_context.py  doctor.py  embedding.py  error_classifier.py  eval_loop.py  evidence.py  federated.py  global_kit.py  graph_context.py  hashline.py  hooks.py  inbox.py  index_control.py  lessons.py  loop_continuation.py  loop_engineering.py  loopd.py  loss_accounting.py  lsp.py  (+65 more)
.ai/runtime/src/ai_core/autoresearch/: __init__.py  complexity_router.py  deepresearch.py  dense.py  evalset.py  fts.py  (+20 more)
.ai/runtime/tests/: test_acceptance_gate.py  test_agent_recommend_tools.py  test_agent_runtime.py  test_agents_md.py  test_ast_chunker.py  test_ast_grep_search.py  test_ast_verify.py  test_astgrep_integration.py  test_astgrep_trust.py  test_audit_append_tail.py  test_audit_discovery_trust.py  test_audit_fold.py  test_audit_fold_concurrency.py  test_audit_private_io.py  test_audit_repair.py  test_audit_transaction_consistency.py  test_autonomous_harness.py  test_autoresearch_deepresearch.py  test_autoresearch_deepresearch_mcp.py  test_autoresearch_dense.py  test_autoresearch_eval.py  test_autoresearch_fetch_guard.py  test_autoresearch_fetch_integration.py  test_autoresearch_hybrid.py  test_autoresearch_ingest.py  test_autoresearch_injection.py  test_autoresearch_lint.py  test_autoresearch_loop.py  test_autoresearch_mcp_e2e.py  test_autoresearch_nonce.py  test_autoresearch_orchestration.py  test_autoresearch_query.py  test_autoresearch_reranker.py  test_autoresearch_router.py  test_autoresearch_rrf.py  test_autoresearch_stage0.py  test_autoresearch_stage1_e2e.py  test_autoresearch_trust.py  test_autoresearch_url_ingest.py  test_autoresearch_verify.py  (+135 more)
(+204 files in other folders)
