[project]
name = "code-brain-runtime"
version = "0.1.0"
description = "Repo-local AI agent infrastructure runtime"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.8.30",
  "pytest>=8.0",
]

[project.scripts]
ai = "ai_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_core"]
