[project]
name = "code-brain-runtime"
version = "0.2.0"
description = "Repo-local AI agent infrastructure runtime"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.8.30",
  "pytest>=8.0",
]

[project.optional-dependencies]
# Dense semantic search via ONNX MiniLM (offline-first, ~80MB model + ~3MB runtime).
# Activated by AI_SEARCH_DENSE=1 once installed. Install:  pip install -e ".[dense]"
dense = [
  "onnxruntime>=1.18",
  "tokenizers>=0.19",
  "numpy>=1.26",
]

[project.scripts]
ai = "ai_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_core"]
