[project]
name = "code-brain-runtime"
version = "0.6.3"
description = "Repo-local AI agent infrastructure runtime"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.8.30",
  "pytest>=8.0",
]

[project.optional-dependencies]
# Dense semantic search via ONNX MiniLM (offline-first, ~80MB model + ~3MB runtime).
# Activated by AI_SEARCH_DENSE=1 once installed. Install:  pip install -e ".[dense]"
dense = [
  "onnxruntime>=1.18",
  "tokenizers>=0.19",
  "numpy>=1.26",
]
# NOTE: LSP-grade navigation (lsp.py: find_references / goto_definition) uses `multilspy`
# (Microsoft, MIT) + a language server on PATH (e.g. pyright). It is deliberately NOT declared
# here: keeping it out of uv.lock preserves the offline, certifi+pytest-only lock the release
# gate checks. lsp.py imports it lazily and degrades gracefully when absent. Opt in by hand:
#   pip install multilspy && pip install pyright   (or: npm i -g pyright)

[project.scripts]
ai = "ai_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_core"]
